[gd_scene load_steps=5 format=2]

[ext_resource path="res://apround.png" type="Texture" id=1]
[ext_resource path="res://Bullet.gd" type="Script" id=2]
[ext_resource path="res://prefabs/expolsion1.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.0
height = 8.0

[node name="Bullet" type="Area2D"]
z_as_relative = false
collision_layer = 2
collision_mask = 255
script = ExtResource( 2 )
bulletSpeed = 700

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
z_index = 8
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="notifier" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, 2.38419e-07 )
scale = Vector2( 0.8, 0.4 )

[node name="explosion" parent="." instance=ExtResource( 3 )]
z_index = 8
frame = 0
playing = false

[connection signal="area_entered" from="." to="." method="_on_Bullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="animation_finished" from="explosion" to="." method="_on_explosion_animation_finished"]
